Testing git branch

--- a/day17/index.html
+++ b/day17/index.html
@@ -15,7 +15,7 @@
             <div id="img-caption"><sub>one of the greatest performers of qawwali, a Sufi Muslim devotional music</sub></div>
         </div>
         <div id="tibute-info">
-            <p>The late <strong>Fateh Ali Khan</strong>  is one of the key artists on Real World Records and <em>certainly one of the most influential</em>. His voice is universally recognised as one of the great voices in musical history and he was key in bringing the Qawwali music tradition to the Western world.
+            <p>The late Fateh Ali Khan is one of the key artists on Real World Records and <em>certainly one of the most influential</em>. His voice is universally recognised as one of the great voices in musical history and he was key in bringing the Qawwali music tradition to the Western world.
 
             Qawwali is a form of Sufi devotional music popular in South Asia, particularly in areas with a historically strong Muslim presence, such as southern Pakistan and parts of North India.
             
