added style to shping list and enter key is working now

--- a/day21/index.html
+++ b/day21/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="contaner">
+        <div class="container">
             <div class="title"><h1>Shopping List</h1></div>
            <input id="userInput" type="text" placeholder="enter item">
            <button id="Enter">Enter</button>
@@ -17,7 +17,7 @@
         
         </ul>
     </div>
-        
+        <div class="circle"></div>
 
     </main>
     <script type="text/javascript" src="script.js"></script>
