--- a/testSolidity/index.html
+++ b/testSolidity/index.html
@@ -36,7 +36,7 @@
   <script>
     //   window.ethereum.enabled();
       const provider = new ethers.providers.Web3Provider(window.ethereum, "ropsten");
-      var MoodContractAddress ="0xA0A1DAb468BDfdc759e81938cfF49b2e54CF11F7";
+      var MoodContractAddress =0xfake account;
       var MoodContractABI=[
 	{
 		"inputs": [
